--- a/js/gis/dijit/property/templates/PropertyDialog.html
+++ b/js/gis/dijit/property/templates/PropertyDialog.html
@@ -361,7 +361,7 @@
 
                                 <br>
                                 <div id="pResCount" style="float:center; padding:0px;margin;0px;display:none;"> </div>
-                                <br>
+
 
                                  <div id="pZmDv" style="float:center; padding:0px;margin;0px;">
                                       <input id="btnZoomAlllIST" data-dojo-attach-point="btnZoomAll" type="button" style="z-index: 900;font-size:10px;margin:0px;padding:0px;height:20px;float:left;display:none" data-dojo-type="dijit/form/Button" intermediateChanges="false" label="zoom to these records" iconClass="dijitNoIcon" data-dojo-attach-event="onClick:zoomAllList"></input>
@@ -392,7 +392,7 @@
                         <div id="pResultDetailTab" data-dojo-type="dijit/layout/ContentPane" title="Detail">
                                <!-- <div class="ptabContent ptabContMain" style="padding:0px !important;margin:0px !important;">-->
 
-                                    <div id="pcMinDet" data-dojo-type="dijit/layout/ContentPane" style="padding:0px !important;margin:0px !important;">
+                                    <div id="pcMinDet" data-dojo-type="dijit/layout/ContentPane" style="height:410px !important;padding:0px !important;margin:0px !important;">
 
 
 
