--- a/js/gis/dijit/NavTools/templates/NavTools.html
+++ b/js/gis/dijit/NavTools/templates/NavTools.html
@@ -27,6 +27,10 @@
 	<button data-dojo-type="dijit.form.Button" data-dojo-props="iconClass:'selIcon',showLabel:false"
 		data-dojo-attach-event="onClick:selecttool"><b>Select Parcels by Point</b></button>
 
+	<button data-dojo-type="dijit.form.Button" data-dojo-props="iconClass:'selboxIcon',showLabel:false"
+		data-dojo-attach-event="onClick:selectboxtool"><b>Select Parcels by Box</b></button>
+
+
 	<button data-dojo-type="dijit.form.Button" data-dojo-props="iconClass:'deactivateIcon',showLabel:false"
 		data-dojo-attach-event="onClick:deactivate">Deactivate</button
 
