--- a/js/viewer/templates/mapOverlay.html
+++ b/js/viewer/templates/mapOverlay.html
@@ -10,7 +10,7 @@
     <div id="panpuckDijit" >
     </div>
 </div>
-<div style="position:absolute;top:60px;right:20px;z-index:40;width:250px;">
+<div style="position:absolute;top:130px;right:45%;z-index:40;width:400px;">
     <div id="growlerDijit">
     </div>
 </div>
