--- a/js/gis/dijit/Growler/css/Growler.css
+++ b/js/gis/dijit/Growler/css/Growler.css
@@ -1,17 +1,28 @@
 .gis-dijit-Growl .growl {
     cursor: pointer;
-    font-size: 0.9em;
+    font-size: 11px;
     margin-right: 1px;
     margin-bottom: 10px;
     padding: 8px 14px 8px 14px;
     margin-bottom: 10px;
     text-shadow: 0 1px 0 rgba(255,255,255,0.5);
     background-color: #fcf8e3;
-    border: 1px solid #fbefd6;
+    /*border: 1px solid #fbefd6;*/
+    border: 2px solid rgb(192, 152, 83);
     -webkit-border-radius: 4px;
     border-radius: 4px;
-    color: #c09853;
+    /*color: #c09853;*/
+    color: rgb(1,109,138);
 }
+
+.gis-dijit-Growl h3 {
+   font-size: 15px;
+   font-weight:bold;
+   font-style: italic;
+   color: rgb(100,132,170);
+   /*text-shadow: 0 0 0.2em rgb(100,132,170), 0 0 0.6em rgb(1,162,180),0 0 0.9em rgb(200,32,70);  */
+}
+
 
 .gis-dijit-Growl .growl h1,.gis-dijit-Growl .growl h2,.gis-dijit-Growl .growl h3,.gis-dijit-Growl .growl h4 {
     margin: 0;
@@ -19,26 +30,33 @@
 
 .gis-dijit-Growl .growl.warning {
     background-color: #fcf8e3;
-    border-color: #fbefd6;
-    color: #c09853;
+    /* border-color: #fbefd6;
+     color: #c09853;*/
+    border-color:rgb(192, 152, 83);
+    
+    color: rgb(100,132,170);
+   /* text-shadow: 0 0 0.2em rgb(192, 152, 83), 0 0 0.2em rgb(182, 132, 103),0 0 0.2em rgb(142, 122, 153);*/ 
 }
 
 .gis-dijit-Growl .growl.success {
     background-color: #dff0d8;
     border-color: #d7eac8;
-    color: #468847;
+   /* color: #468847;*/
+    color: rgb(100,132,170);
 }
 
 .gis-dijit-Growl .growl.error {
     background-color: #f2dede;
     border-color: #eed4d8;
-    color: #b94a48;
+    /*color: #b94a48;*/
+    color: rgb(100,132,170);
 }
 
 .gis-dijit-Growl .growl.info {
     background-color: #d9edf7;
     border-color: #bee9f1;
-    color: #3a87ad;
+   /* color: #3a87ad;*/
+   color: rgb(100,132,170);
 }
 
 .gis-dijit-Growl .growl.default {
