--- a/js/gis/dijit/prcmin/templates/prcmin.html
+++ b/js/gis/dijit/prcmin/templates/prcmin.html
@@ -53,7 +53,7 @@
          <table class="CSSTableGenerator"  >
 		 <tr>
 		   <td>
-		   				  <input type="button" data-dojo-type="dijit/form/Button" data-dojo-attach-point="ebZoning" data-dojo-attach-event="onClick:ebClick"  label="County Permit Information" iconClass="dijitNoIcon" style="width:100%;height:25px;font-size:9px;padding:0px;margin:0px"></input>
+		   				  <input type="button" data-dojo-type="dijit/form/Button" data-dojo-attach-point="ebZoning" data-dojo-attach-event="onClick:ebClick"  label="County Permit Information" iconClass="dijitNoIcon" style="width:100%;font-size:8px;padding:0px;margin:0px"></input>
 		   </td>
 		 </tr>
  	    </table>
@@ -121,7 +121,7 @@
          <table class="CSSTableGenerator"  >
 		 <tr>
 		   <td>
-		   				 <input type="button" data-dojo-type="dijit/form/Button" data-dojo-attach-point="ebSale" data-dojo-attach-event="onClick:ebClick"  label="2014 Certified Values " iconClass="dijitNoIcon" style="width:100%;height:25px;font-size:9px;padding:0px;margin:0px"></input>
+		   				 <input type="button" data-dojo-type="dijit/form/Button" data-dojo-attach-point="ebSale" data-dojo-attach-event="onClick:ebClick"  label="2014 Certified Values " iconClass="dijitNoIcon" style="width:100%;font-size:8px;padding:0px;margin:0px"></input>
 		   </td>
 		 </tr>
  	    </table>
@@ -174,7 +174,7 @@
          <table class="CSSTableGenerator"  >
 		 <tr>
 		   <td>
-		   				 <input type="button" data-dojo-type="dijit/form/Button" data-dojo-attach-point="ebSales" data-dojo-attach-event="onClick:ebClick"  label="Sales Information" iconClass="dijitNoIcon" style="width:100%;height:25px;font-size:9px;padding:0px;margin:0px"></input>
+		   				 <input type="button" data-dojo-type="dijit/form/Button" data-dojo-attach-point="ebSales" data-dojo-attach-event="onClick:ebClick"  label="Sales Information" iconClass="dijitNoIcon" style="width:100%;font-size:8px;padding:0px;margin:0px"></input>
 		   </td>
 		 </tr>
  	    </table>
