--- a/js/gis/dijit/property/css/property.css
+++ b/js/gis/dijit/property/css/property.css
@@ -60,6 +60,8 @@ select {
    //overflow: auto !important;
    overflow: hidden !important;
    height:auto !important;
+   padding:0px !important;
+   margin:0px !important;
 }
 #pane1 {
    overflow: auto !important;
@@ -70,8 +72,13 @@ select {
 }
 */
 #pcMinDet {
-  height:93% !important;
+  height:97% !important;
+  width: 99% !important;
 
+}
+#pResultsTab{
+  padding:0px !important;
+  margin:0px !important;
 }
  
 .propertyDijit .listdbootstrapFix{
@@ -334,6 +341,9 @@ select {
   cursor: default;
 }
 
+.dbootstrap .dijitContentPane {
+    padding: 2px;
+}
 
 .dbootstrap .dijitTabContainerBottom-tabs, .dbootstrap .dijitTabContainerTop-tabs, .dbootstrap .dijitTabContainerLeft-tabs, .dbootstrap .dijitTabContainerRight-tabs {
     border: medium none;
@@ -345,7 +355,11 @@ select {
     font-weight: bold;
     margin: 0px;
 }
-
+ 
+.propertyDijit .dbootstrap .dijitContentPane {
+    padding: 2px;
+}
+ 
 .progressDialog h2 {
     color: #000000;
     cursor: pointer;
