--- a/js/gis/dijit/property/templates/PropertyDialog.html
+++ b/js/gis/dijit/property/templates/PropertyDialog.html
@@ -37,7 +37,7 @@
                                                 </div>
                                             </div>
 
-                                            <div style="margin: 20px 5px 2px 7px;">
+                                            <div style="margin: 38px 5px 2px 7px;">
 
                                                 <div id="pPropSearchForm" class="pContResVis" data-dojo-attach-point="pPropSearchForm" data-dojo-type="dijit/layout/ContentPane" >
                                                     <p style="margin:0px;font-weight:bold">Parcel Number:</p>
@@ -338,7 +338,7 @@
                 </div>
 
 
-                <div id="pResultsTab" data-dojo-type="dijit/layout/ContentPane" title="Results">
+                <div id="pResultsTab"   data-dojo-type="dijit/layout/ContentPane" title="Results">
 
 
 
@@ -348,20 +348,25 @@
 
                             <div class="ptabContent ptabContMain" style="padding:0px !important;margin:0px !important;">
 
+                               <div id="pResCount" style="float:center; padding:0px;margin;0px;display:none;"> </div>
 
-                                <div id="pPageSelDiv"   style="display:none;padding: 0px; font-size: 9px; z-index: 900; width: 250px; height: 18px;">
-                                    <div style="float:left; padding:0px;margin;0px;">page: </div>
-                                    <div style="padding: 0px; float: right; padding:0px;margin;0px;">
-                                        <select id="selResPage" style="font-size:11pt; width: 120px; padding:0px;margin;0px">
+                                <div id="pPageSelDiv"   style="display:none;padding: 0px; font-size: 9px;">
+                                    <div style="float:left; padding:0px;margin;0px;">jump to page: </div>
+                                    <div style="padding: 0px; float: left; padding:0px;margin;0px;">
+                                        <select id="selResPage" style="font-size:9pt;padding:0px;margin;0px">
                                             <option value="1" selected="true">1</option>
-
                                         </select>
                                     </div>
                                 </div>
 
-                                <br>
-                                <div id="pResCount" style="float:center; padding:0px;margin;0px;display:none;"> </div>
 
+                                <br>
+                                <center>
+                                <div id="pPageSelDiv3"   style="display:none;margin:5px 0px 10px 0px;padding: 0px; font-size: 8px;  ">
+								    <a id="pPagePrev" title="previous page" data-dojo-attach-event="onClick:changePage">previous 50 records</a>
+									<a id="pPageNext" title="next page" data-dojo-attach-event="onClick:changePage">more records</a>
+                                </div>
+                                </center>
 
                                  <div id="pZmDv" style="float:center; padding:0px;margin;0px;">
                                       <input id="btnZoomAlllIST" data-dojo-attach-point="btnZoomAll" type="button" style="z-index: 900;font-size:10px;margin:0px;padding:0px;height:20px;float:left;display:none" data-dojo-type="dijit/form/Button" intermediateChanges="false" label="zoom to these records" iconClass="dijitNoIcon" data-dojo-attach-event="onClick:zoomAllList"></input>
@@ -377,12 +382,27 @@
 
                                 <div class="ptabContent ptabContMain" style="padding:0px !important;margin:0px !important;">
                                     <br>
-                                    <div id="pSearchResults" data-dojo-type="dijit/layout/ContentPane" style="padding:0px !important;margin:0px !important;">
+                                    <div id="pSearchResults" data-dojo-type="dijit/layout/ContentPane" style="padding:0px 0px 7px 0px !important;margin:0px !important;">
 
                                         <!--<div id="pWaitDiv" style="visibility:visible"><img id="pwaitimg"  alt="Please standby while I search" title="Please Standby" src="images/ajax-loader3.gif" /></div>-->
 
                                     </div>
+                                    <br>
                                 </div>
+
+
+
+
+                                <center>
+                                <div id="pPageSelDiv2"   style="display:none;margin:3px 0px 0px 0px;padding: 0px; font-size: 9px; z-index: 900;  height: 15px;">
+								    <a id="pPagePrev2" title="previous page" data-dojo-attach-event="onClick:changePage">previous 50 records</a>
+									<a id="pPageNext2" title="next page" data-dojo-attach-event="onClick:changePage">more records</a>
+                                </div>
+                                </center>
+                                <br>
+
+
+
                             </div>
 
                         </div>
