Major Layout Redesign and Overhaul
Got rid of left accordion panel

--- a/css/main.css
+++ b/css/main.css
@@ -188,9 +188,10 @@ font-size: 15pt;
     width: 15px !important;
     height: 15px !important;
     margin: 0px auto !important;
-    background-image: url("../images/buttonArrows.png") !important;
+    /*background-image: url("../images/buttonArrows.png") !important;
     background-repeat: no-repeat !important;
     background-position: -51px 53% !important;
+    */
 }
 
  
