--- a/js/gis/dijit/property/templates/PropertyDialog.html
+++ b/js/gis/dijit/property/templates/PropertyDialog.html
@@ -410,9 +410,9 @@
 
 
                         <div id="pResultDetailTab" data-dojo-type="dijit/layout/ContentPane" title="Detail">
-                               <!-- <div class="ptabContent ptabContMain" style="padding:0px !important;margin:0px !important;">-->
+                               <!-- <div class="ptabContent ptabContMain" style="padding:0px !important;margin:0px !important;"><br>-->
 
-                                    <div id="pcMinDet" data-dojo-type="dijit/layout/ContentPane" style="height:410px !important;padding:0px !important;margin:0px !important;">
+                                    <div id="pcMinDet" data-dojo-type="dijit/layout/ContentPane" style="padding:0px 0px 7px 0px !important;margin:0px !important;">
 
 
 
@@ -434,7 +434,7 @@
                 </div>
 
 
-                <div id="pSavedTab" data-dojo-type="dijit/layout/ContentPane" title="Saved">
+                <div id="pSavedTab" data-dojo-type="dijit/layout/ContentPane" title="Saved" style="display:none">
 
 
                     <div class="ptabContent ptabContMain" style="padding:0px !important;margin:0px !important;">
@@ -463,7 +463,22 @@
                       </div>
                     </div>
                 </div>
+
+
+           <div id="pLayersTab"   data-dojo-type="dijit/layout/ContentPane" title="Layers" style="overflow-y:auto;padding:0px !important;margin:0px !important;">
+                <div id="pLayersTabCnt"   data-dojo-type="dijit/layout/ContentPane" data-dojo-attach-point="pLayersTabCnt" class="ptabContent ptabContMain" style="overflow-y:auto;padding:0px !important;margin:0px !important;"></div>
+
+           </div>
+           <div id="pLegendTab"   data-dojo-type="dijit/layout/ContentPane" title="Legend" style="overflow-y:auto;padding:0px !important;margin:0px !important;">
+                <div id="pLegendTabCnt"   data-dojo-type="dijit/layout/ContentPane" data-dojo-attach-point="pLegendTabCnt" class="ptabContent ptabContMain" style="padding:0px !important;margin:0px !important;"></div>
+
+           </div>
+
             </div>
+
+
+
+
         </div>
 
     </div>
