Started on floating panel resize feature

--- a/js/gis/dijit/property/templates/PropertyDialog.html
+++ b/js/gis/dijit/property/templates/PropertyDialog.html
@@ -1,4 +1,4 @@
-<div id="propertyDijitC" class="propertyDijit" style="overflow:hidden !important">
+<div id="propertyDijitC" class="propertyDijit" style="overflow:hidden !important"  >
 
 
 
@@ -482,7 +482,7 @@
         </div>
 
     </div>
-    <div class="dijitDialogPaneActionBar ptabActnBar">
+    <div id="propSrchActnBar" class="dijitDialogPaneActionBar ptabActnBar">
         <div class="closeButton" data-dojo-attach-point="closebtnDijitDiv">
             <input id="propertyclosebtn" type="button" style="z-index: 900;font-size:9px;margin:0px;padding:0px;height:20px" data-dojo-type="dijit/form/Button" intermediateChanges="false" label="Close" iconClass="dijitNoIcon" data-dojo-attach-event="onClick:close">
             </input>
