--- a/js/gis/dijit/property/templates/PropertyDialog.html
+++ b/js/gis/dijit/property/templates/PropertyDialog.html
@@ -483,10 +483,10 @@
 
     </div>
     <div id="propSrchActnBar" class="dijitDialogPaneActionBar ptabActnBar">
-        <div class="closeButton" data-dojo-attach-point="closebtnDijitDiv">
+        <div id="closeBtn" class="closeButton" data-dojo-attach-point="closebtnDijitDiv">
             <input id="propertyclosebtn" type="button" style="z-index: 900;font-size:9px;margin:0px;padding:0px;height:20px" data-dojo-type="dijit/form/Button" intermediateChanges="false" label="Close" iconClass="dijitNoIcon" data-dojo-attach-event="onClick:close">
             </input>
 
-        </div>
+       </div>
     </div>
 </div>
