--- a/js/gis/dijit/NavTools/templates/NavTools.html
+++ b/js/gis/dijit/NavTools/templates/NavTools.html
@@ -12,7 +12,7 @@
  <!--<i title="Deactivate Navigation Tool" data-dojo-attach-event="onClick:deactivate" class="fa fa-ban fa-2x" style="color:red"></i>-->
 
 
-	<button data-dojo-type="dijit.form.Button" data-dojo-props="iconClass:'zoominIcon',showLabel:false"
+	 <button data-dojo-type="dijit.form.Button" data-dojo-props="iconClass:'zoominIcon',showLabel:false"
 		data-dojo-attach-event="onClick:zoomIn">Zoom In</button>
 	<button data-dojo-type="dijit.form.Button" data-dojo-props="iconClass:'zoomoutIcon',showLabel:false"
 		data-dojo-attach-event="onClick:zoomOut">Zoom Out</button>
@@ -41,7 +41,7 @@
 
 
 
-	<button data-dojo-type="dijit.form.Button" data-dojo-props="iconClass:'deactivateIcon',showLabel:false" data-dojo-attach-event="onClick:deactivate">Deactivate</button>
+	<button data-dojo-type="dijit.form.Button" data-dojo-props="iconClass:'deactivateIcon',showLabel:false" data-dojo-attach-event="onClick:deactivate">Clear Selection</button>
 
 	<!--<div id="ntWidgSel" data-dojo-type="dijit/layout/ContentPane" data-dojo-attach-point="ntWidgSel" style="background-color:blue"  >-->
 	<select id="selWTool" data-dojo-id="selWTool" name="selWTool" style="padding:0px 0px 0px 25px" data-dojo-attach-event="onChange:selectToolWdgt"    data-dojo-type="dijit/form/Select">
