--- a/js/gis/dijit/Help/templates/HelpDialog.html
+++ b/js/gis/dijit/Help/templates/HelpDialog.html
@@ -287,8 +287,8 @@
 	            </div>
 
 	            <div class="showAtStartup" data-dojo-attach-point="startupDijitDiv" >
-	                Show at Startup: <input id="showAtStartup" type="checkbox" data-dojo-type="dijit.form.CheckBox" data-dojo-props="name:'startup'"
-	                       data-dojo-attach-point="startupDijit" data-dojo-attach-event="onChange:_onStartupChange"/>
+	                Do not show at startup: <input id="showAtStartup" type="checkbox" data-dojo-type="dijit.form.CheckBox" data-dojo-props="name:'startup'"
+	                       data-dojo-attach-point="startupDijit" data-dojo-attach-event="onChange:_onStartupChange" checked />
 	            </div>
         </div>
 </div>
