--- a/js/gis/dijit/property/templates/PropertyDialog.html
+++ b/js/gis/dijit/property/templates/PropertyDialog.html
@@ -3,9 +3,10 @@
 
 
     <div data-dojo-type="dijit/layout/ContentPane" data-dojo-attach-point="propctrNode" class="propertyContainer" style="overflow:hidden !important;padding:0px !important">
+
         <div id="propertyNode" data-dojo-attach-point="propertyNode" class="propertyNode" style="overflow:hidden !important">
 
-            <div id="pSearchTabs" data-dojo-attach-point="pSearchTabs" data-dojo-type="dijit/layout/TabContainer" class="propertyTabContainer">
+            <div id="pSearchTabs" data-dojo-attach-point="pSearchTabs" data-dojo-type="dijit/layout/TabContainer" class="propertyTabContainer"  >
 
                 <div id="pSearchTab" data-dojo-attach-point="pSearchTab" data-dojo-type="dijit/layout/ContentPane" title="Search">
                     <div class="ptabContBG">
@@ -23,10 +24,9 @@
 
                                             <div style="margin:0px 0px 0px 45px;padding: 0px; font-size: 11px !important; z-index: 900; width: 220px; height: 18px;">
 
-                                                <div style="margin:0px 8px 0px 0px;float:left; padding:0px;margin;0px;font-weight:bold">Search Type:
-                                                </div>
+                                               <div style="margin:0px 8px 0px 0px;float:left; padding:0px;margin;0px;font-weight:bold">Search Type:</div>
                                                 <div style="padding: 0px; float: right; padding:0px;margin;0px;">
-                                                    <select id="selSearchType" data-dojo-attach-point="selSearchType" data-dojo-attach-event="onChange:changeSearchForm" style="width: 120px; padding:0px;margin;0px">
+                                                   <select id="selSearchType" data-dojo-attach-point="selSearchType" data-dojo-attach-event="onChange:changeSearchForm" style="width: 120px; padding:0px;margin;0px">
                                                         <option value="property" selected="true">Property</option>
                                                         <option value="salesdata">Sales Data</option>
                                                         <option value="saleslist">Sales List</option>
@@ -51,18 +51,13 @@
                                                     <br>
                                                     <br>
 
-
                                                     <p style="margin:0px;font-weight:bold">Address or Street Name:</p>
 
                                                     <input id="tbAddr" type="text" autocomplete="on" data-dojo-type="dijit/form/ValidationTextBox" data-dojo-attach-point="searchAddr"  style="width: 219px;"></input>
                                                     <br>
                                                     <br>
-
-
                                                 </div>
                                             </div>
-
-
                                                  <div id="pBusForm" class="pContRes" data-dojo-attach-point="pBusForm" data-dojo-type="dijit/layout/ContentPane" style="display:none;">
                                                     <p>Business:</p>
                                                     <input id="tbBus" type="text" autocomplete="on" data-dojo-type="dijit/form/ValidationTextBox" data-dojo-attach-point="searchBus" data-dojo-props="name:'searchBus',trim:true,required:true,value:'',placeholder:'Enter the text you want to search for.',class:'searchText'" style="width: 219px;"></input>
@@ -342,7 +337,7 @@
 
 
 
-                    <div id="pResultsSubTabs" data-dojo-attach-point="pResultsSubTabs" data-dojo-type="dijit/layout/TabContainer" class="propertyTabContainer">
+                    <div id="pResultsSubTabs" data-dojo-attach-point="pResultsSubTabs" data-dojo-type="dijit/layout/TabContainer" class="propertyTabContainer" >
 
                         <div id="pResultListTab" class="pResultListTab" data-dojo-type="dijit/layout/ContentPane" title="List">
 
@@ -437,10 +432,21 @@
 
                                      <input id="btnSavedPrLbls" data-dojo-attach-point="btnSavedPrLbls" type="button" style="z-index: 900;font-size:10px;margin:0px;padding:0px;height:20px;float:right;display:none" data-dojo-type="dijit/form/Button" intermediateChanges="false" label="print mailing labels" iconClass="dijitNoIcon" data-dojo-attach-event="onClick:printMailLblsSaved"></input>
                             </div>
+                            <br>
 
 
-                            <div id="pSearchSaved" data-dojo-type="dijit/layout/ContentPane" style="padding:0px !important;margin:0px !important;">
-                            </div>
+                            <!--<div id="pSearchSaved" data-dojo-type="dijit/layout/ContentPane" style="padding:0px !important;margin:0px !important;">
+                            </div>-->
+
+                            <div class="ptabContent ptabContMain" style="padding:0px !important;margin:0px !important;">
+                                <br>
+                                    <div id="pSearchSaved" data-dojo-type="dijit/layout/ContentPane" style="padding:0px 0px 7px 0px !important;margin:0px !important;">
+
+
+                                    </div>
+                             <br>
+                          </div>
+
 
 
              </div>
@@ -456,10 +462,10 @@
 
            </div>
 
+
+
+
             </div>
-
-
-
 
         </div>
 
