TOC Layout fixes

--- a/js/gis/dijit/property/templates/PropertyDialog.html
+++ b/js/gis/dijit/property/templates/PropertyDialog.html
@@ -335,8 +335,6 @@
 
                 <div id="pResultsTab"   data-dojo-type="dijit/layout/ContentPane" title="Results">
 
-
-
                     <div id="pResultsSubTabs" data-dojo-attach-point="pResultsSubTabs" data-dojo-type="dijit/layout/TabContainer" class="propertyTabContainer" >
 
                         <div id="pResultListTab" class="pResultListTab" data-dojo-type="dijit/layout/ContentPane" title="List">
@@ -366,14 +364,10 @@
                                  <div id="pZmDv" style="float:center; padding:0px;margin;0px;">
                                       <input id="btnZoomAlllIST" data-dojo-attach-point="btnZoomAll" type="button" style="z-index: 900;font-size:10px;margin:0px;padding:0px;height:20px;float:left;display:none" data-dojo-type="dijit/form/Button" intermediateChanges="false" label="zoom to these records" iconClass="dijitNoIcon" data-dojo-attach-event="onClick:zoomAllList"></input>
 
-                                     <input id="btnPrLbls" data-dojo-attach-point="btnPrLbls" type="button" style="z-index: 900;font-size:10px;margin:0px;padding:0px;height:20px;float:right;display:none" data-dojo-type="dijit/form/Button" intermediateChanges="false" label="print mailing labels" iconClass="dijitNoIcon" data-dojo-attach-event="onClick:printMailLblsMenu"></input>
+                                     <input id="btnPrLbls" data-dojo-attach-point="btnPrLbls" type="button" style="z-index: 900;font-size:10px;margin:0px;padding:0px;height:20px;float:right;display:none" data-dojo-type="dijit/form/Button" intermediateChanges="false" label="export/mailing labels" iconClass="dijitNoIcon" data-dojo-attach-event="onClick:printMailLblsMenu"></input>
 
                                  </div>
                                  <br>
-
-
-
-
 
                                 <div class="ptabContent ptabContMain" style="padding:0px !important;margin:0px !important;">
                                     <br>
@@ -385,9 +379,6 @@
                                     <br>
                                 </div>
 
-
-
-
                                 <center>
                                 <div id="pPageSelDiv2"   style="display:none;margin:3px 0px 0px 0px;padding: 0px; font-size: 9px; z-index: 900;  height: 15px;">
 								    <a id="pPagePrev2" title="previous page" data-dojo-attach-event="onClick:changePage">previous 50 records</a>
@@ -396,9 +387,10 @@
                                 </center>
                                 <br>
 
-
-
                             </div>
+
+
+
 
                         </div>
                         <!-- end pResultListTab -->
@@ -423,33 +415,23 @@
 
                 </div>
 
-
+              <!--
               <div id="pSavedTab" data-dojo-type="dijit/layout/ContentPane" title="Saved" style="display:none">
-
-
                              <div id="pSavedZmDv" style="float:center;padding:0px;margin;0px;">
                                       <input id="btnZoomAllSaved" data-dojo-attach-point="btnSavedZoomAll" type="button" style="z-index: 900;font-size:10px;margin:0px;padding:0px;height:20px;float:left;display:none" data-dojo-type="dijit/form/Button" intermediateChanges="false" label="zoom to these records" iconClass="dijitNoIcon" data-dojo-attach-event="onClick:zoomAllListSaved"></input>
 
                                      <input id="btnSavedPrLbls" data-dojo-attach-point="btnSavedPrLbls" type="button" style="z-index: 900;font-size:10px;margin:0px;padding:0px;height:20px;float:right;display:none" data-dojo-type="dijit/form/Button" intermediateChanges="false" label="print mailing labels" iconClass="dijitNoIcon" data-dojo-attach-event="onClick:printMailLblsSaved"></input>
                             </div>
                             <br>
-
-
-                            <!--<div id="pSearchSaved" data-dojo-type="dijit/layout/ContentPane" style="padding:0px !important;margin:0px !important;">
-                            </div>-->
-
-                            <div class="ptabContent ptabContMain" style="padding:0px !important;margin:0px !important;">
+                             <div class="ptabContent ptabContMain" style="padding:0px !important;margin:0px !important;">
                                 <br>
                                     <div id="pSearchSaved" data-dojo-type="dijit/layout/ContentPane" style="padding:0px 0px 7px 0px !important;margin:0px !important;">
-
-
                                     </div>
                              <br>
                           </div>
-
-
-
              </div>
+             -->
+
              <!-- end pSavedTab-->
 
 
