--- a/js/gis/dijit/property/css/property.css
+++ b/js/gis/dijit/property/css/property.css
@@ -27,8 +27,9 @@ select {
 }
  
 #pSearchResults {
-   overflow: hidden !important;
-   height:auto;
+   overflow-y: scroll !important;
+   height:385px !important; 
+   
 }
 
 #pSearchSaved {
@@ -59,9 +60,10 @@ select {
 #pResultDetailTab {
    //overflow: auto !important;
    overflow: hidden !important;
-   height:auto !important;
+   height:auto !important; 
    padding:0px !important;
    margin:0px !important;
+   /*height:385px !important; */
 }
 #pane1 {
    overflow: auto !important;
@@ -81,6 +83,19 @@ select {
 #pResultsTab{
   padding:0px !important;
   margin:0px !important;
+}
+
+
+
+
+.propertyDijit a{
+   cursor: hand;
+   cursor: pointer;
+}
+
+.propertyDijit img {
+   cursor: hand;
+   cursor: pointer;
 }
  
 .propertyDijit .listdbootstrapFix{
